crates/solidity/testing/snapshots/bindings_output/yul/slot_of_public_var_override/v2/generated/0.4.11-failure.txt
# This file is generated automatically by infrastructure scripts. Please don't edit by hand.

Parse errors:
Error: Expected OpenBrace or ReturnsKeyword or Semicolon.
   ╭─[input.sol:2:27]
   │
 2 │     function x() external view virtual returns (uint) {}
   │                           ───────────────┬───────────────  
   │                                          ╰───────────────── Error occurred here.
───╯
Error: Expected Equal or Semicolon.
   ╭─[input.sol:6:26]
   │
 6 │     uint public override x;
   │                          ┬  
   │                          ╰── Error occurred here.
───╯
Error: Expected CloseBrace or OpenBrace or ReturnsKeyword or Semicolon.
    ╭─[input.sol:8:5]
    │
  8 │ ╭─▶     function test() internal pure {
    ┆ ┆   
 12 │ ├─▶     }
    │ │           
    │ ╰─────────── Error occurred here.
────╯

------------------------------------------------------------------------

Definitions (3):
- Def: #1 ["Base" @ input.sol:1:10] (contract)
- Def: #2 ["Test" @ input.sol:5:10] (contract)
- Def: #3 ["override" @ input.sol:6:17] (state var, type: uint256)

------------------------------------------------------------------------

References (1):
- Ref: ["Base" @ input.sol:5:18] -> #1

------------------------------------------------------------------------

Unbound identifiers (1):
- ???: ["x" @ input.sol:2:14]

------------------------------------------------------------------------

Bindings: 
   ╭─[input.sol:1:1]
   │
 1 │ contract Base {
   │          ──┬─  
   │            ╰─── name: 1
 2 │     function x() external view virtual returns (uint) {}
   │              ┬  
   │              ╰── ???
   │ 
 5 │ contract Test is Base {
   │          ──┬─    ──┬─  
   │            ╰─────────── name: 2
   │                    │   
   │                    ╰─── ref: 1
 6 │     uint public override x;
   │                 ────┬───  
   │                     ╰───── name: 3
───╯
